# Stat_Arb_with_K_Means

./: README.md  main.py  setup.cfg
archive/data/: sp_financials.csv
archive/notebooks/: main.ipynb  nice_graphs.ipynb  stat_arb_backtest.ipynb  stat_arb_clusters.ipynb
archive/notebooks/archive/: k_means_(OLD)_cluster_plusplus_cnt.ipynb  stat_arb_(OLD)_backtest.ipynb  stat_arb_multiple_positions.ipynb
archive/pkg/: README.md
archive/pkg/src/: industry.py  main.py
archive/pkg/tests/: main.py  make_clusters.py  make_graphs.py  make_portfolio.py  make_signals.py
archive/scripts/: test.py
model/: k_means.py  stat_arb_clustering.py  stat_arb_model.py  stat_arb_test.py
notebooks/: k_means_cluster_++.ipynb  k_means_cluster_random_cnt.ipynb  nice_graphs.ipynb  stat_arb_backtest.ipynb  stat_arb_clusters.ipynb  statistical_arbitrage.ipynb
pkg/: setup.py
pkg/src/: main.py
pkg/src/Stat_Arb_with_K_Means_samdelaney42.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pkg/src/clustering/: make_clusters.py
pkg/src/statarb/: graphs.py  make_model.py
scripts/: test.py
testing/: IEX_API_TEST.ipynb  main_backtest.ipynb  sa_clusters.py  sa_grapher.py  sa_mod.py
testing/data/: iex_eg.csv
testing/data/clusters/: first_trading_day_monthly_2001.csv  labled_stock_clusters.csv  labled_stock_clusters_2021-03-31.csv  labled_stock_clusters_2021-04-01.csv
testing/data/prices_2005_01_01/: A.csv  AAL.csv  AAP.csv  AAPL.csv  ABBV.csv  ABC.csv  ABT.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADS.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AET.csv  AFL.csv  AIG.csv  (+447 more)
(+3 files in other folders)
